<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TextAdventureGame</string>
    <string name="about">About</string>
    <string name="load">Load</string>
    <string name="play">Play</string>
    <string name="help">Help</string>
    <string name="todo">TODO</string>
    <string name="back">Back</string>
    <string name="sale_e_sablia">Sale e Sablia!</string>
    <string name="sale_e_sablias">Sale e Sablia</string>
    <string name="next">Next</string>
    <string name="exit">Exit</string>
    <string name="sale_e_sablia_the_fall_of_vanoe">Sale e Sablia The Fall of Vanoe</string>
    <string name="west">West</string>
    <string name="east">East</string>
    <string name="room">Room</string>
    <string name="player">Player</string>
    <string name="description">Description</string>
    <string name="north">North</string>
    <string name="south">South</string>
    <string name="pickup">pickup</string>
    <string name="save">Save</string>
    <string name="drop">Drop</string>
    <string name="image" />
    <string name="show_winner">VS</string>
    <string name="king_won">The King won the round</string>
    <string name="user_won">You won the round</string>
    <string name="imagedeath">imageDeath</string>
</resources>